--- a/log.html
+++ b/log.html
@@ -1750,25 +1750,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,70914],[],[[4,0,1,0,[],[1,313,70599],[[0,5,6,0,7,8,0,0,[1,313,68485],[],[[313,2,9]]],[0,10,6,0,11,0,0,0,[1,68799,2112],[],[]]]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,9552],[],[[4,0,1,0,[],[1,312,9239],[[0,5,6,0,7,8,0,0,[1,313,7109],[],[[313,2,9]]],[0,10,6,0,11,0,0,0,[1,7423,2127],[],[]]]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TC1","*C:\\Users\\Abdur Rahman\\Desktop\\pytest\\TC1.robot","*TC1.robot","*LoginTest","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://bing.com/\">https://bing.com/\x3c/a>, chrome","*Opening browser 'chrome' to base url '<a href=\"https://bing.com/\">https://bing.com/\x3c/a>'.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TC1","*C:\\Users\\Abdur Rahman\\Desktop\\pytest\\TC1.robot","*TC1.robot","*SearchTest","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://bing.com/\">https://bing.com/\x3c/a>, chrome","*Opening browser 'chrome' to base url '<a href=\"https://bing.com/\">https://bing.com/\x3c/a>'.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:11","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:01:11","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:01:11","fail":0,"id":"s1","label":"TC1","name":"TC1","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:10","fail":0,"id":"s1","label":"TC1","name":"TC1","pass":1}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1610610868076;
+window.output["baseMillis"] = 1610612342642;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 70943;
+window.output["generated"] = 9569;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
